# cfg

./: ..vimrc.mine.un~  .Xresources  .bashenv  .bashrc  .dash_init  .gdbinit  .gitignore  .gtkrc-2.0  .nvidia-settings-rc  .profile  .shared_aliases  .vimrc  .vimrc.mine  .xinitrc  .zsh_aliases  .zshenv  .zshrc  extract.sh  rifleff.cpp  runnvim.sh  runvim.sh  shared.sh  todo_sys.md  todo_vim.md  vim_builders.sh
.config/: Trolltech.conf  konsolerc  weston.ini
.config/alacritty/: alacritty.yml
.config/aseprite/: aseprite.ini
.config/conky/: conky.conf
.config/fontconfig/: fonts.conf
.config/gtk-2.0/: gtkfilechooser.ini
.config/gtk-3.0/: settings.ini
.config/htop/: htoprc
.config/i3/: bind_copy_path.sh  bind_find_all.sh  bind_google.sh  bind_htop.sh  bind_one_time_command.sh  bind_open_containing_folder.sh  bind_open_editor.sh  bind_open_music.sh  bind_open_shell_in.sh  bind_ranger.sh  bind_select_workspace.sh  config  find_all_locations  open_ranger.sh  record-screen.sh
.config/mpv/: input.conf  mpv.conf
.mplayer/: config
clangcpp/: run.sh
cpp/: rifleff.cpp
cpp/ocv/: CMakeLists.txt  main.cpp
etc/: fstab  mkinitcpio.conf  pacman.conf
gcc_single_cpp/: main
maincpp/: run.sh
sh/: build_nvim.sh  build_single_file.sh  customizers_old  distribute_symlinks  homelinks  init_nvidia  installation.sh  interactive.sh  link_etc_X11  relink  vim_builders.sh
shell/: build_single_file.sh  interactive.sh  log_paths.sh  vim_builders.sh
tips_to_self/: preparing_and_testing_unity_apps_for_google_store.md
todo/: todo_python.md  todo_sys.md  todo_vim.md  ue4_setup.md
tools/: bt2ll.pl  termfps.sh
tools/x11_xcb_example/: CMakeLists.txt  one.cpp
vimcfg/: copy_path_to_clipboard.vim  folding.vim  fugitivecfg.vim  gitgutter.vim  indenting.vim  quick_plugin_configs.vim  replace_operator.vim  setup_terminal.vim  tab_navigation.vim
vimscript/: fzf_config.vim  make_integration.vim  tabline.vim
x11_xcb_example/: CMakeLists.txt  one.cpp
(+149 files in other folders)
